fix navbar padding on mobile size

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -69,6 +69,7 @@ $transition: 0.5s;
 
     nav {
       .navbar-brand {
+        margin-left: 15px;
         font-size: 25px;
       }
       .navbar-nav {
