--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -871,6 +871,7 @@ Navbar CSS
   border: none;
   background: #eee !important;
   padding: 10px;
+  margin-right: 15px;
   border-radius: 0;
 
   .icon-bar {
